--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "eleventy": "rm -rf _site/ && npx eleventy"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.7.1"
+    "@11ty/eleventy": "0.9.0"
   }
 }
