--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eleventy": "rm -rf _site/ && npx eleventy"
   },
   "devDependencies": {
-    "@11ty/eleventy": "0.9.0"
+    "@11ty/eleventy": "0.9.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.1"
   }
 }
