--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "0.9.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.1"
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.0.1",
+    "markdown-it-anchor": "5.2.5"
   }
 }
